# Arrays-WorkProject

./: .gitignore  CMakeLists.txt  main.c  topicos.txt
src/: makeArray.c  makeArray.h
src/arrays/: arrays.c  arrays.h
src/operations/addOperation/: addOperation.c  addOperation.h
src/operations/subtractOperation/: subtractOperation.c  subtractOperation.h
src/printArray/: printArray.c  printArray.h
